--- a/index.html
+++ b/index.html
@@ -4,79 +4,65 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AP Gitar Musik</title>
-  <meta name="description" content="AP Gitar Musik adalah website resmi seputar gitar, musik, dan perlengkapan musik untuk musisi pemula hingga profesional.">
   <style>
     body {
       margin: 0;
       font-family: Arial, Helvetica, sans-serif;
-      background: #f4f6f8;
-      color: #333;
+      background: #0f172a;
+      color: #e5e7eb;
     }
     header {
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-      color: white;
+      background: linear-gradient(135deg, #2563eb, #1e40af);
       padding: 40px 20px;
       text-align: center;
     }
     header h1 {
       margin: 0;
-      font-size: 32px;
+      font-size: 2.2em;
     }
     header p {
       margin-top: 10px;
-      font-size: 16px;
+      font-size: 1.1em;
       opacity: 0.9;
-    }
-    nav {
-      background: #1f2933;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      padding: 12px;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 14px;
-    }
-    nav a:hover {
-      text-decoration: underline;
     }
     section {
       padding: 40px 20px;
       max-width: 900px;
       margin: auto;
     }
-    .card {
-      background: white;
-      border-radius: 12px;
-      padding: 25px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-      margin-bottom: 25px;
+    h2 {
+      color: #60a5fa;
+      margin-bottom: 10px;
     }
-    .card h2 {
-      margin-top: 0;
-      color: #1f2933;
+    .card {
+      background: #020617;
+      border-radius: 12px;
+      padding: 20px;
+      margin-top: 20px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.4);
     }
     footer {
-      background: #1f2933;
-      color: #ccc;
       text-align: center;
       padding: 20px;
-      font-size: 13px;
+      background: #020617;
+      color: #94a3b8;
+      font-size: 0.9em;
     }
-    button {
-      background: #2c5364;
-      color: white;
-      border: none;
-      padding: 12px 18px;
+    a {
+      color: #38bdf8;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .btn {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 12px 20px;
+      background: #2563eb;
+      color: #fff;
       border-radius: 8px;
-      cursor: pointer;
-      font-size: 14px;
-    }
-    button:hover {
-      background: #203a43;
+      font-weight: bold;
     }
   </style>
 </head>
@@ -84,52 +70,43 @@
 
 <header>
   <h1>AP Gitar Musik</h1>
-  <p>Website Resmi Seputar Gitar & Musik</p>
+  <p>Tempat belajar, review, dan informasi seputar gitar & musik</p>
 </header>
 
-<nav>
-  <a href="#home">Home</a>
-  <a href="#tentang">Tentang</a>
-  <a href="#layanan">Layanan</a>
-  <a href="#kontak">Kontak</a>
-</nav>
-
-<section id="home">
-  <div class="card">
-    <h2>Selamat Datang</h2>
-    <p>AP Gitar Musik adalah website informasi seputar gitar, musik, dan perlengkapan musik untuk musisi pemula hingga profesional.</p>
-    <button>Pelajari Lebih Lanjut</button>
-  </div>
-</section>
-
-<section id="tentang">
+<section>
   <div class="card">
     <h2>Tentang Kami</h2>
-    <p>Kami hadir untuk berbagi informasi, referensi, dan layanan seputar dunia gitar dan musik secara mudah dan terpercaya.</p>
+    <p>
+      AP Gitar Musik adalah website sederhana yang membahas dunia gitar,
+      musik, tutorial dasar, tips perawatan alat musik, dan informasi menarik
+      lainnya untuk pemula maupun pecinta musik.
+    </p>
   </div>
-</section>
 
-<section id="layanan">
   <div class="card">
-    <h2>Layanan</h2>
+    <h2>Layanan & Konten</h2>
     <ul>
-      <li>Informasi gitar & musik</li>
-      <li>Rekomendasi alat musik</li>
-      <li>Konten untuk musisi</li>
+      <li>Tutorial gitar dasar</li>
+      <li>Review gitar & aksesoris</li>
+      <li>Tips bermain musik</li>
+      <li>Informasi dan edukasi musik</li>
     </ul>
   </div>
-</section>
 
-<section id="kontak">
   <div class="card">
     <h2>Kontak</h2>
-    <p>WhatsApp: 08xxxxxxxxxx</p>
-    <p>Email: apgitarmusik@gmail.com</p>
+    <p>
+      WhatsApp: <a href="https://wa.me/628XXXXXXXXXX" target="_blank">Chat WhatsApp</a><br>
+      Email: apgitarmusik@gmail.com
+    </p>
+    <a class="btn" href="https://github.com/ofelsandofel72-prog/ap-gitar-musik-" target="_blank">
+      Lihat GitHub
+    </a>
   </div>
 </section>
 
 <footer>
-  © 2026 AP Gitar Musik — Website Gratis & Aman
+  © 2026 AP Gitar Musik • Dibuat dengan GitHub & Netlify
 </footer>
 
 </body>
