--- a/index.html
+++ b/index.html
@@ -1,112 +1,194 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AP Gitar Musik</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #0f172a;
-      color: #e5e7eb;
-    }
-    header {
-      background: linear-gradient(135deg, #2563eb, #1e40af);
-      padding: 40px 20px;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.2em;
-    }
-    header p {
-      margin-top: 10px;
-      font-size: 1.1em;
-      opacity: 0.9;
-    }
-    section {
-      padding: 40px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-    h2 {
-      color: #60a5fa;
-      margin-bottom: 10px;
-    }
-    .card {
-      background: #020617;
-      border-radius: 12px;
-      padding: 20px;
-      margin-top: 20px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.4);
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: #020617;
-      color: #94a3b8;
-      font-size: 0.9em;
-    }
-    a {
-      color: #38bdf8;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    .btn {
-      display: inline-block;
-      margin-top: 15px;
-      padding: 12px 20px;
-      background: #2563eb;
-      color: #fff;
-      border-radius: 8px;
-      font-weight: bold;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>AP Digital Marketing</title>
+
+<style>
+body{
+  margin:0;
+  font-family:Arial, Helvetica, sans-serif;
+  background:#0f172a;
+  color:#e5e7eb;
+  line-height:1.6;
+}
+header{
+  background:linear-gradient(135deg,#2563eb,#1e40af);
+  padding:70px 20px;
+  text-align:center;
+}
+header h1{
+  font-size:2.5em;
+  margin:0;
+}
+header p{
+  font-size:1.2em;
+  max-width:700px;
+  margin:15px auto;
+}
+.btn{
+  display:inline-block;
+  margin-top:25px;
+  padding:14px 26px;
+  background:#22c55e;
+  color:#020617;
+  font-weight:bold;
+  border-radius:10px;
+  text-decoration:none;
+}
+section{
+  max-width:1100px;
+  margin:auto;
+  padding:50px 20px;
+}
+h2{
+  color:#60a5fa;
+  margin-bottom:15px;
+}
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+  gap:20px;
+}
+.card{
+  background:#020617;
+  padding:25px;
+  border-radius:14px;
+  box-shadow:0 10px 30px rgba(0,0,0,.4);
+}
+ul{
+  padding-left:18px;
+}
+footer{
+  background:#020617;
+  text-align:center;
+  padding:25px;
+  color:#94a3b8;
+}
+.badge{
+  display:inline-block;
+  background:#2563eb;
+  padding:6px 12px;
+  border-radius:20px;
+  font-size:0.8em;
+  margin-bottom:10px;
+}
+</style>
 </head>
+
 <body>
 
 <header>
-  <h1>AP Gitar Musik</h1>
-  <p>Tempat belajar, review, dan informasi seputar gitar & musik</p>
+  <h1>AP Digital Marketing</h1>
+  <p>
+    Solusi Pemasaran Digital untuk UMKM, Personal Brand, dan Bisnis Online.
+    Bantu bisnismu tumbuh lebih cepat, modern, dan profesional.
+  </p>
+  <a class="btn" href="https://wa.me/628XXXXXXXXXX" target="_blank">
+    Konsultasi Gratis via WhatsApp
+  </a>
 </header>
 
 <section>
-  <div class="card">
-    <h2>Tentang Kami</h2>
-    <p>
-      AP Gitar Musik adalah website sederhana yang membahas dunia gitar,
-      musik, tutorial dasar, tips perawatan alat musik, dan informasi menarik
-      lainnya untuk pemula maupun pecinta musik.
-    </p>
-  </div>
+  <h2>Tentang Kami</h2>
+  <p>
+    AP Digital Marketing adalah layanan pemasaran digital yang fokus membantu
+    bisnis kecil hingga menengah agar lebih dikenal, dipercaya, dan menghasilkan
+    penjualan melalui internet.
+  </p>
+  <p>
+    Kami menggabungkan strategi konten, branding, dan teknologi website agar
+    bisnis Anda terlihat profesional dan kompetitif.
+  </p>
+</section>
 
-  <div class="card">
-    <h2>Layanan & Konten</h2>
-    <ul>
-      <li>Tutorial gitar dasar</li>
-      <li>Review gitar & aksesoris</li>
-      <li>Tips bermain musik</li>
-      <li>Informasi dan edukasi musik</li>
-    </ul>
-  </div>
+<section>
+  <h2>Layanan Kami</h2>
+  <div class="grid">
+    <div class="card">
+      <span class="badge">Populer</span>
+      <h3>Manajemen Media Sosial</h3>
+      <p>
+        Kelola Instagram, Facebook, dan TikTok secara profesional untuk
+        meningkatkan engagement dan brand awareness.
+      </p>
+    </div>
 
-  <div class="card">
-    <h2>Kontak</h2>
-    <p>
-      WhatsApp: <a href="https://wa.me/628XXXXXXXXXX" target="_blank">Chat WhatsApp</a><br>
-      Email: apgitarmusik@gmail.com
-    </p>
-    <a class="btn" href="https://github.com/ofelsandofel72-prog/ap-gitar-musik-" target="_blank">
-      Lihat GitHub
-    </a>
+    <div class="card">
+      <h3>Pembuatan Website</h3>
+      <p>
+        Website modern, cepat, dan mobile-friendly untuk profil usaha,
+        landing page, maupun promosi online.
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>Branding & Konten</h3>
+      <p>
+        Desain konten menarik, caption menjual, dan konsep branding
+        yang konsisten dan kuat.
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>Iklan Digital</h3>
+      <p>
+        Optimasi promosi berbayar (ads) agar tepat sasaran dan
+        sesuai target pasar.
+      </p>
+    </div>
   </div>
 </section>
 
+<section>
+  <h2>Kenapa Pilih AP Digital Marketing?</h2>
+  <div class="grid">
+    <div class="card">
+      <h3>Strategi Tepat Sasaran</h3>
+      <p>
+        Kami fokus pada hasil nyata, bukan sekadar tampilan.
+      </p>
+    </div>
+    <div class="card">
+      <h3>Cocok untuk UMKM</h3>
+      <p>
+        Paket fleksibel dan harga terjangkau untuk bisnis kecil.
+      </p>
+    </div>
+    <div class="card">
+      <h3>Support Responsif</h3>
+      <p>
+        Komunikasi mudah dan cepat melalui WhatsApp.
+      </p>
+    </div>
+  </div>
+</section>
+
+<section>
+  <h2>Alur Kerja Kami</h2>
+  <ol>
+    <li>Konsultasi kebutuhan bisnis</li>
+    <li>Analisis target pasar</li>
+    <li>Pembuatan strategi digital</li>
+    <li>Eksekusi & optimasi</li>
+    <li>Evaluasi hasil</li>
+  </ol>
+</section>
+
+<section>
+  <h2>Siap Naik Level?</h2>
+  <p>
+    Jangan biarkan bisnismu kalah saing di era digital.
+    Mulai bangun kehadiran online yang kuat sekarang juga.
+  </p>
+  <a class="btn" href="https://wa.me/628XXXXXXXXXX" target="_blank">
+    Hubungi Kami Sekarang
+  </a>
+</section>
+
 <footer>
-  © 2026 AP Gitar Musik • Dibuat dengan GitHub & Netlify
+  © 2026 AP Digital Marketing • Website by GitHub & Netlify
 </footer>
 
 </body>
