--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AP Digital Marketing</title>
+<title>AP Gitar Musik</title>
 
 <style>
 body{
@@ -80,12 +80,12 @@ footer{
 <body>
 
 <header>
-  <h1>AP Digital Marketing</h1>
+  <h1>AP Gitar Musik</h1>
   <p>
     Solusi Pemasaran Digital untuk UMKM, Personal Brand, dan Bisnis Online.
     Bantu bisnismu tumbuh lebih cepat, modern, dan profesional.
   </p>
-  <a class="btn" href="https://wa.me/628XXXXXXXXXX" target="_blank">
+  <a class="btn" href="https://wa.me/+62 857-1386-3920" target="_blank">
     Konsultasi Gratis via WhatsApp
   </a>
 </header>
@@ -142,7 +142,7 @@ footer{
 </section>
 
 <section>
-  <h2>Kenapa Pilih AP Digital Marketing?</h2>
+  <h2>Kenapa Pilih AP Gitar Musik?</h2>
   <div class="grid">
     <div class="card">
       <h3>Strategi Tepat Sasaran</h3>
@@ -182,13 +182,13 @@ footer{
     Jangan biarkan bisnismu kalah saing di era digital.
     Mulai bangun kehadiran online yang kuat sekarang juga.
   </p>
-  <a class="btn" href="https://wa.me/628XXXXXXXXXX" target="_blank">
+  <a class="btn" href="https://wa.me/625713863920X" target="_blank">
     Hubungi Kami Sekarang
   </a>
 </section>
 
 <footer>
-  © 2026 AP Digital Marketing • Website by GitHub & Netlify
+  © 2025 AP Gitar Musik • Website by GitHub & Netlify
 </footer>
 
 </body>
