--- a/index.html
+++ b/index.html
@@ -1,194 +1,142 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AP Gitar Musik</title>
-
-<style>
-body{
-  margin:0;
-  font-family:Arial, Helvetica, sans-serif;
-  background:#0f172a;
-  color:#e5e7eb;
-  line-height:1.6;
-}
-header{
-  background:linear-gradient(135deg,#2563eb,#1e40af);
-  padding:70px 20px;
-  text-align:center;
-}
-header h1{
-  font-size:2.5em;
-  margin:0;
-}
-header p{
-  font-size:1.2em;
-  max-width:700px;
-  margin:15px auto;
-}
-.btn{
-  display:inline-block;
-  margin-top:25px;
-  padding:14px 26px;
-  background:#22c55e;
-  color:#020617;
-  font-weight:bold;
-  border-radius:10px;
-  text-decoration:none;
-}
-section{
-  max-width:1100px;
-  margin:auto;
-  padding:50px 20px;
-}
-h2{
-  color:#60a5fa;
-  margin-bottom:15px;
-}
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-  gap:20px;
-}
-.card{
-  background:#020617;
-  padding:25px;
-  border-radius:14px;
-  box-shadow:0 10px 30px rgba(0,0,0,.4);
-}
-ul{
-  padding-left:18px;
-}
-footer{
-  background:#020617;
-  text-align:center;
-  padding:25px;
-  color:#94a3b8;
-}
-.badge{
-  display:inline-block;
-  background:#2563eb;
-  padding:6px 12px;
-  border-radius:20px;
-  font-size:0.8em;
-  margin-bottom:10px;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AP Gitar Musik | Toko Gitar & Alat Musik</title>
+    <meta name="description" content="AP Gitar Musik - Toko gitar dan alat musik terpercaya. Gitar akustik, elektrik, bass, aksesoris. Original & bergaransi.">
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+            background: #f5f5f5;
+            color: #333;
+        }
+        header {
+            background: #111;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        nav a {
+            color: white;
+            margin: 0 10px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        section {
+            padding: 40px 20px;
+            max-width: 1000px;
+            margin: auto;
+            background: white;
+            margin-top: 20px;
+            border-radius: 8px;
+        }
+        h2 {
+            color: #111;
+        }
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background: #25D366;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
+        .produk {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+        }
+        .card {
+            border: 1px solid #ddd;
+            padding: 15px;
+            border-radius: 8px;
+            text-align: center;
+        }
+        footer {
+            background: #111;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            margin-top: 30px;
+        }
+    </style>
 </head>
-
 <body>
 
 <header>
-  <h1>AP Gitar Musik</h1>
-  <p>
-    Solusi Pemasaran Digital untuk UMKM, Personal Brand, dan Bisnis Online.
-    Bantu bisnismu tumbuh lebih cepat, modern, dan profesional.
-  </p>
-  <a class="btn" href="https://wa.me/+62 857-1386-3920" target="_blank">
-    Konsultasi Gratis via WhatsApp
-  </a>
+    <h1>AP Gitar Musik</h1>
+    <p>Toko Gitar & Alat Musik Terpercaya</p>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#produk">Produk</a>
+        <a href="#tentang">Tentang</a>
+        <a href="#order">Cara Order</a>
+        <a href="#kontak">Kontak</a>
+    </nav>
 </header>
 
-<section>
-  <h2>Tentang Kami</h2>
-  <p>
-    AP Digital Marketing adalah layanan pemasaran digital yang fokus membantu
-    bisnis kecil hingga menengah agar lebih dikenal, dipercaya, dan menghasilkan
-    penjualan melalui internet.
-  </p>
-  <p>
-    Kami menggabungkan strategi konten, branding, dan teknologi website agar
-    bisnis Anda terlihat profesional dan kompetitif.
-  </p>
+<section id="home">
+    <h2>Selamat Datang di AP Gitar Musik</h2>
+    <p>
+        Kami menyediakan berbagai gitar dan alat musik berkualitas, original,
+        dan harga bersahabat. Cocok untuk pemula hingga profesional.
+    </p>
+    <a class="btn" href="https://wa.me/628xxxxxxxxxx" target="_blank">Chat WhatsApp</a>
 </section>
 
-<section>
-  <h2>Layanan Kami</h2>
-  <div class="grid">
-    <div class="card">
-      <span class="badge">Populer</span>
-      <h3>Manajemen Media Sosial</h3>
-      <p>
-        Kelola Instagram, Facebook, dan TikTok secara profesional untuk
-        meningkatkan engagement dan brand awareness.
-      </p>
+<section id="produk">
+    <h2>Produk Kami</h2>
+    <div class="produk">
+        <div class="card">
+            <h3>Gitar Akustik</h3>
+            <p>Suara jernih & nyaman dimainkan</p>
+        </div>
+        <div class="card">
+            <h3>Gitar Elektrik</h3>
+            <p>Cocok untuk rock, blues, jazz</p>
+        </div>
+        <div class="card">
+            <h3>Bass</h3>
+            <p>Low end kuat & stabil</p>
+        </div>
+        <div class="card">
+            <h3>Aksesoris</h3>
+            <p>Senar, capo, strap, tuner</p>
+        </div>
     </div>
-
-    <div class="card">
-      <h3>Pembuatan Website</h3>
-      <p>
-        Website modern, cepat, dan mobile-friendly untuk profil usaha,
-        landing page, maupun promosi online.
-      </p>
-    </div>
-
-    <div class="card">
-      <h3>Branding & Konten</h3>
-      <p>
-        Desain konten menarik, caption menjual, dan konsep branding
-        yang konsisten dan kuat.
-      </p>
-    </div>
-
-    <div class="card">
-      <h3>Iklan Digital</h3>
-      <p>
-        Optimasi promosi berbayar (ads) agar tepat sasaran dan
-        sesuai target pasar.
-      </p>
-    </div>
-  </div>
 </section>
 
-<section>
-  <h2>Kenapa Pilih AP Gitar Musik?</h2>
-  <div class="grid">
-    <div class="card">
-      <h3>Strategi Tepat Sasaran</h3>
-      <p>
-        Kami fokus pada hasil nyata, bukan sekadar tampilan.
-      </p>
-    </div>
-    <div class="card">
-      <h3>Cocok untuk UMKM</h3>
-      <p>
-        Paket fleksibel dan harga terjangkau untuk bisnis kecil.
-      </p>
-    </div>
-    <div class="card">
-      <h3>Support Responsif</h3>
-      <p>
-        Komunikasi mudah dan cepat melalui WhatsApp.
-      </p>
-    </div>
-  </div>
+<section id="tentang">
+    <h2>Tentang Kami</h2>
+    <p>
+        AP Gitar Musik adalah toko alat musik yang berkomitmen menyediakan produk
+        original, pelayanan jujur, dan pengiriman aman ke seluruh Indonesia.
+    </p>
 </section>
 
-<section>
-  <h2>Alur Kerja Kami</h2>
-  <ol>
-    <li>Konsultasi kebutuhan bisnis</li>
-    <li>Analisis target pasar</li>
-    <li>Pembuatan strategi digital</li>
-    <li>Eksekusi & optimasi</li>
-    <li>Evaluasi hasil</li>
-  </ol>
+<section id="order">
+    <h2>Cara Order</h2>
+    <ol>
+        <li>Pilih produk</li>
+        <li>Chat WhatsApp</li>
+        <li>Konfirmasi stok & harga</li>
+        <li>Lakukan pembayaran</li>
+        <li>Barang dikirim</li>
+    </ol>
 </section>
 
-<section>
-  <h2>Siap Naik Level?</h2>
-  <p>
-    Jangan biarkan bisnismu kalah saing di era digital.
-    Mulai bangun kehadiran online yang kuat sekarang juga.
-  </p>
-  <a class="btn" href="https://wa.me/625713863920X" target="_blank">
-    Hubungi Kami Sekarang
-  </a>
+<section id="kontak">
+    <h2>Kontak Kami</h2>
+    <p>📱 WhatsApp: 08xxxxxxxxxx</p>
+    <p>📧 Email: apgitarmusik@gmail.com</p>
+    <p>🕘 Jam Operasional: 08.00 – 21.00 WIB</p>
 </section>
 
 <footer>
-  © 2025 AP Gitar Musik • Website by GitHub & Netlify
+    <p>© 2026 AP Gitar Musik. All Rights Reserved.</p>
 </footer>
 
 </body>
