Refactor index.html for SEO and layout improvements
Updated the HTML structure and content for better SEO and user experience.

--- a/index.html
+++ b/index.html
@@ -1,143 +1,142 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AP Gitar Musik | Toko Gitar & Alat Musik</title>
-    <meta name="description" content="AP Gitar Musik - Toko gitar dan alat musik terpercaya. Gitar akustik, elektrik, bass, aksesoris. Original & bergaransi.">
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-            background: #f5f5f5;
-            color: #333;
-        }
-        header {
-            background: #111;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        nav a {
-            color: white;
-            margin: 0 10px;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        section {
-            padding: 40px 20px;
-            max-width: 1000px;
-            margin: auto;
-            background: white;
-            margin-top: 20px;
-            border-radius: 8px;
-        }
-        h2 {
-            color: #111;
-        }
-        .btn {
-            display: inline-block;
-            padding: 10px 20px;
-            background: #25D366;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 10px;
-        }
-        .produk {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-        }
-        .card {
-            border: 1px solid #ddd;
-            padding: 15px;
-            border-radius: 8px;
-            text-align: center;
-        }
-        footer {
-            background: #111;
-            color: white;
-            text-align: center;
-            padding: 20px;
-            margin-top: 30px;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>AP Gitar Musik | Toko Gitar & Alat Musik Terpercaya</title>
+<meta name="description" content="AP Gitar Musik adalah toko gitar dan alat musik terpercaya. Produk original, harga bersahabat, pengiriman aman ke seluruh Indonesia.">
+
+<link rel="stylesheet" href="css/style.css">
+
+<!-- SEO STRUCTURED DATA -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MusicStore",
+  "name": "AP Gitar Musik",
+  "description": "Toko gitar dan alat musik terpercaya",
+  "url": "https://username.github.io/ap-gitar-musik/",
+  "telephone": "+628xxxxxxxxxx",
+  "address": {
+    "@type": "PostalAddress",
+    "addressCountry": "ID"
+  }
+}
+</script>
 </head>
+
 <body>
 
-<header>
-    <h1>AP Gitar Musik</h1>
-    <p>Toko Gitar & Alat Musik Terpercaya</p>
-    <nav>
-        <a href="#home">Home</a>
-        <a href="#produk">Produk</a>
-        <a href="#tentang">Tentang</a>
-        <a href="#order">Cara Order</a>
-        <a href="#kontak">Kontak</a>
+<header class="site-header">
+  <div class="container">
+    <h1 class="logo">AP Gitar Musik</h1>
+    <nav aria-label="Navigasi utama">
+      <ul class="nav">
+        <li><a href="#produk">Produk</a></li>
+        <li><a href="#keunggulan">Keunggulan</a></li>
+        <li><a href="#testimoni">Testimoni</a></li>
+        <li><a href="#faq">FAQ</a></li>
+        <li><a href="#kontak">Kontak</a></li>
+      </ul>
     </nav>
+  </div>
 </header>
 
-<section id="home">
-    <h2>Selamat Datang di AP Gitar Musik</h2>
-    <p>
-        Kami menyediakan berbagai gitar dan alat musik berkualitas, original,
-        dan harga bersahabat. Cocok untuk pemula hingga profesional.
-    </p>
-    <a class="btn" href="https://wa.me/628xxxxxxxxxx" target="_blank">Chat WhatsApp</a>
+<main>
+
+<section class="hero">
+  <div class="container">
+    <h2>Gitar Berkualitas • Harga Bersahabat</h2>
+    <p>Produk Original • Pengiriman Aman • CS Responsif</p>
+    <a class="btn-primary" href="https://wa.me/628xxxxxxxxxx" target="_blank" rel="noopener">Chat WhatsApp</a>
+  </div>
 </section>
 
-<section id="produk">
+<section id="produk" class="section">
+  <div class="container">
     <h2>Produk Kami</h2>
-    <div class="produk">
-        <div class="card">
-            <h3>Gitar Akustik</h3>
-            <p>Suara jernih & nyaman dimainkan</p>
-        </div>
-        <div class="card">
-            <h3>Gitar Elektrik</h3>
-            <p>Cocok untuk rock, blues, jazz</p>
-        </div>
-        <div class="card">
-            <h3>Bass</h3>
-            <p>Low end kuat & stabil</p>
-        </div>
-        <div class="card">
-            <h3>Aksesoris</h3>
-            <p>Senar, capo, strap, tuner</p>
-        </div>
+    <div class="grid">
+      <article class="card">
+        <h3>Gitar Akustik</h3>
+        <p class="price">Mulai Rp 500.000</p>
+        <p>Cocok untuk pemula & profesional</p>
+      </article>
+      <article class="card">
+        <h3>Gitar Elektrik</h3>
+        <p class="price">Mulai Rp 1.200.000</p>
+        <p>Rock • Blues • Jazz</p>
+      </article>
+      <article class="card">
+        <h3>Bass</h3>
+        <p class="price">Mulai Rp 1.500.000</p>
+        <p>Low end kuat & stabil</p>
+      </article>
+      <article class="card">
+        <h3>Aksesoris</h3>
+        <p class="price">Mulai Rp 20.000</p>
+        <p>Senar • Capo • Strap</p>
+      </article>
     </div>
+  </div>
 </section>
 
-<section id="tentang">
-    <h2>Tentang Kami</h2>
-    <p>
-        AP Gitar Musik adalah toko alat musik yang berkomitmen menyediakan produk
-        original, pelayanan jujur, dan pengiriman aman ke seluruh Indonesia.
-    </p>
+<section id="keunggulan" class="section light">
+  <div class="container">
+    <h2>Kenapa Pilih Kami?</h2>
+    <ul class="list">
+      <li>Produk original & bergaransi</li>
+      <li>Harga jujur & bersaing</li>
+      <li>Pengiriman aman ke seluruh Indonesia</li>
+      <li>Customer service responsif</li>
+    </ul>
+  </div>
 </section>
 
-<section id="order">
-    <h2>Cara Order</h2>
-    <ol>
-        <li>Pilih produk</li>
-        <li>Chat WhatsApp</li>
-        <li>Konfirmasi stok & harga</li>
-        <li>Lakukan pembayaran</li>
-        <li>Barang dikirim</li>
-    </ol>
+<section id="testimoni" class="section">
+  <div class="container">
+    <h2>Testimoni Pelanggan</h2>
+    <blockquote>
+      ⭐⭐⭐⭐⭐ <br>
+      “Gitarnya bagus, packing rapi.”<br>
+      <cite>— Andi, Jakarta</cite>
+    </blockquote>
+    <blockquote>
+      ⭐⭐⭐⭐⭐ <br>
+      “Pelayanan cepat dan ramah.”<br>
+      <cite>— Rizky, Bandung</cite>
+    </blockquote>
+  </div>
 </section>
 
-<section id="kontak">
+<section id="faq" class="section light">
+  <div class="container">
+    <h2>FAQ</h2>
+    <p><strong>Apakah produk original?</strong><br>Ya, semua produk dijamin original.</p>
+    <p><strong>Bisa kirim ke luar kota?</strong><br>Bisa, ke seluruh Indonesia.</p>
+  </div>
+</section>
+
+<section id="kontak" class="section">
+  <div class="container">
     <h2>Kontak Kami</h2>
-    <p>📱 WhatsApp: 08xxxxxxxxxx</p>
-    <p>📧 Email: apgitarmusik@gmail.com</p>
-    <p>🕘 Jam Operasional: 08.00 – 21.00 WIB</p>
+    <address>
+      WhatsApp: 08xxxxxxxxxx<br>
+      Email: apgitarmusik@gmail.com<br>
+      Jam Operasional: 08.00 – 21.00 WIB
+    </address>
+  </div>
 </section>
 
-<footer>
+</main>
+
+<footer class="site-footer">
+  <div class="container">
     <p>© 2026 AP Gitar Musik. All Rights Reserved.</p>
+  </div>
 </footer>
+
+<a href="https://wa.me/628xxxxxxxxxx" class="wa-float" aria-label="Chat WhatsApp">💬</a>
 
 </body>
 </html>
