--- a/index.html
+++ b/index.html
@@ -1,142 +1,208 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>AP Gitar Musik | Toko Gitar & Alat Musik Terpercaya</title>
-<meta name="description" content="AP Gitar Musik adalah toko gitar dan alat musik terpercaya. Produk original, harga bersahabat, pengiriman aman ke seluruh Indonesia.">
-
-<link rel="stylesheet" href="css/style.css">
-
-<!-- SEO STRUCTURED DATA -->
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "MusicStore",
-  "name": "AP Gitar Musik",
-  "description": "Toko gitar dan alat musik terpercaya",
-  "url": "https://username.github.io/ap-gitar-musik/",
-  "telephone": "+628xxxxxxxxxx",
-  "address": {
-    "@type": "PostalAddress",
-    "addressCountry": "ID"
-  }
-}
-</script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AP Gitar Musik | Toko Gitar Profesional</title>
+  <meta name="description" content="AP Gitar Musik menjual gitar akustik, elektrik, bass & aksesoris. Produk original, harga bersahabat, pengiriman aman.">
+  <style>
+    * {
+      box-sizing: border-box;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      background: #f5f5f5;
+      color: #333;
+      line-height: 1.6;
+    }
+    header {
+      background: linear-gradient(135deg, #000, #222);
+      color: #fff;
+      padding: 40px 20px;
+      text-align: center;
+    }
+    header h1 {
+      font-size: 2.2rem;
+      margin-bottom: 10px;
+      letter-spacing: 1px;
+    }
+    header p {
+      opacity: 0.9;
+      font-size: 1rem;
+    }
+    nav {
+      background: #111;
+      padding: 12px;
+      text-align: center;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 12px;
+      font-weight: 500;
+    }
+    nav a:hover {
+      color: #25d366;
+    }
+    .container {
+      max-width: 1100px;
+      margin: auto;
+      padding: 30px 20px;
+    }
+    .hero {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+    .hero h2 {
+      font-size: 1.8rem;
+      margin-bottom: 10px;
+    }
+    .hero p {
+      color: #666;
+      margin-bottom: 20px;
+    }
+    .btn {
+      display: inline-block;
+      background: #25d366;
+      color: #fff;
+      padding: 14px 24px;
+      border-radius: 30px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .btn:hover {
+      background: #1ebe5d;
+    }
+    .section-title {
+      text-align: center;
+      margin-bottom: 30px;
+      font-size: 1.6rem;
+    }
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+    }
+    .card {
+      background: #fff;
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+      transition: transform 0.3s;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+    }
+    .card h3 {
+      margin-bottom: 10px;
+    }
+    .price {
+      color: #25d366;
+      font-weight: bold;
+      margin-bottom: 8px;
+    }
+    .features {
+      background: #fff;
+      margin-top: 50px;
+      padding: 40px 20px;
+      border-radius: 12px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+    }
+    .features ul {
+      list-style: none;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 15px;
+    }
+    .features li {
+      background: #f7f7f7;
+      padding: 15px;
+      border-radius: 10px;
+    }
+    footer {
+      margin-top: 60px;
+      background: #111;
+      color: #ccc;
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9rem;
+    }
+    .wa-float {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #25d366;
+      color: #fff;
+      padding: 15px 18px;
+      border-radius: 50%;
+      font-size: 20px;
+      text-decoration: none;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+    }
+  </style>
 </head>
-
 <body>
 
-<header class="site-header">
-  <div class="container">
-    <h1 class="logo">AP Gitar Musik</h1>
-    <nav aria-label="Navigasi utama">
-      <ul class="nav">
-        <li><a href="#produk">Produk</a></li>
-        <li><a href="#keunggulan">Keunggulan</a></li>
-        <li><a href="#testimoni">Testimoni</a></li>
-        <li><a href="#faq">FAQ</a></li>
-        <li><a href="#kontak">Kontak</a></li>
-      </ul>
-    </nav>
-  </div>
+<header>
+  <h1>AP Gitar Musik</h1>
+  <p>Toko Gitar Berkualitas • Harga Bersahabat • Terpercaya</p>
 </header>
 
-<main>
+<nav>
+  <a href="#produk">Produk</a>
+  <a href="#keunggulan">Keunggulan</a>
+  <a href="#kontak">Kontak</a>
+</nav>
 
-<section class="hero">
-  <div class="container">
-    <h2>Gitar Berkualitas • Harga Bersahabat</h2>
-    <p>Produk Original • Pengiriman Aman • CS Responsif</p>
-    <a class="btn-primary" href="https://wa.me/628xxxxxxxxxx" target="_blank" rel="noopener">Chat WhatsApp</a>
-  </div>
-</section>
+<div class="container">
+  <section class="hero">
+    <h2>Gitar Berkualitas untuk Pemula & Profesional</h2>
+    <p>Produk original, pengiriman aman, dan CS responsif siap membantu.</p>
+    <a class="btn" href="https://wa.me/628xxxxxxxxxx" target="_blank">Chat WhatsApp</a>
+  </section>
 
-<section id="produk" class="section">
-  <div class="container">
-    <h2>Produk Kami</h2>
-    <div class="grid">
-      <article class="card">
-        <h3>Gitar Akustik</h3>
-        <p class="price">Mulai Rp 500.000</p>
-        <p>Cocok untuk pemula & profesional</p>
-      </article>
-      <article class="card">
-        <h3>Gitar Elektrik</h3>
-        <p class="price">Mulai Rp 1.200.000</p>
-        <p>Rock • Blues • Jazz</p>
-      </article>
-      <article class="card">
-        <h3>Bass</h3>
-        <p class="price">Mulai Rp 1.500.000</p>
-        <p>Low end kuat & stabil</p>
-      </article>
-      <article class="card">
-        <h3>Aksesoris</h3>
-        <p class="price">Mulai Rp 20.000</p>
-        <p>Senar • Capo • Strap</p>
-      </article>
+  <h2 id="produk" class="section-title">Produk Unggulan</h2>
+  <div class="products">
+    <div class="card">
+      <h3>Gitar Akustik</h3>
+      <p class="price">Mulai Rp 500.000</p>
+      <p>Suara jernih, nyaman dimainkan.</p>
+    </div>
+    <div class="card">
+      <h3>Gitar Elektrik</h3>
+      <p class="price">Mulai Rp 1.200.000</p>
+      <p>Rock • Blues • Jazz</p>
+    </div>
+    <div class="card">
+      <h3>Bass</h3>
+      <p class="price">Mulai Rp 1.500.000</p>
+      <p>Low end kuat & stabil.</p>
+    </div>
+    <div class="card">
+      <h3>Aksesoris</h3>
+      <p class="price">Harga Terjangkau</p>
+      <p>Senar, tuner, strap, capo, dll.</p>
     </div>
   </div>
-</section>
 
-<section id="keunggulan" class="section light">
-  <div class="container">
-    <h2>Kenapa Pilih Kami?</h2>
-    <ul class="list">
-      <li>Produk original & bergaransi</li>
-      <li>Harga jujur & bersaing</li>
-      <li>Pengiriman aman ke seluruh Indonesia</li>
-      <li>Customer service responsif</li>
+  <section id="keunggulan" class="features">
+    <h2 class="section-title">Kenapa Pilih AP Gitar Musik?</h2>
+    <ul>
+      <li>✅ Produk 100% original</li>
+      <li>🚚 Pengiriman aman & cepat</li>
+      <li>💬 CS ramah & responsif</li>
+      <li>💸 Harga jujur & bersaing</li>
     </ul>
-  </div>
-</section>
+  </section>
+</div>
 
-<section id="testimoni" class="section">
-  <div class="container">
-    <h2>Testimoni Pelanggan</h2>
-    <blockquote>
-      ⭐⭐⭐⭐⭐ <br>
-      “Gitarnya bagus, packing rapi.”<br>
-      <cite>— Andi, Jakarta</cite>
-    </blockquote>
-    <blockquote>
-      ⭐⭐⭐⭐⭐ <br>
-      “Pelayanan cepat dan ramah.”<br>
-      <cite>— Rizky, Bandung</cite>
-    </blockquote>
-  </div>
-</section>
-
-<section id="faq" class="section light">
-  <div class="container">
-    <h2>FAQ</h2>
-    <p><strong>Apakah produk original?</strong><br>Ya, semua produk dijamin original.</p>
-    <p><strong>Bisa kirim ke luar kota?</strong><br>Bisa, ke seluruh Indonesia.</p>
-  </div>
-</section>
-
-<section id="kontak" class="section">
-  <div class="container">
-    <h2>Kontak Kami</h2>
-    <address>
-      WhatsApp: 08xxxxxxxxxx<br>
-      Email: apgitarmusik@gmail.com<br>
-      Jam Operasional: 08.00 – 21.00 WIB
-    </address>
-  </div>
-</section>
-
-</main>
-
-<footer class="site-footer">
-  <div class="container">
-    <p>© 2026 AP Gitar Musik. All Rights Reserved.</p>
-  </div>
+<footer id="kontak">
+  <p>© 2026 AP Gitar Musik • Semua Hak Dilindungi</p>
 </footer>
 
-<a href="https://wa.me/628xxxxxxxxxx" class="wa-float" aria-label="Chat WhatsApp">💬</a>
+<a class="wa-float" href="https://wa.me/628xxxxxxxxxx" target="_blank">WA</a>
 
 </body>
 </html>
