--- a/index.html
+++ b/index.html
@@ -1,208 +1,155 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AP Gitar Musik | Toko Gitar Profesional</title>
-  <meta name="description" content="AP Gitar Musik menjual gitar akustik, elektrik, bass & aksesoris. Produk original, harga bersahabat, pengiriman aman.">
-  <style>
-    * {
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-    body {
-      background: #f5f5f5;
-      color: #333;
-      line-height: 1.6;
-    }
-    header {
-      background: linear-gradient(135deg, #000, #222);
-      color: #fff;
-      padding: 40px 20px;
-      text-align: center;
-    }
-    header h1 {
-      font-size: 2.2rem;
-      margin-bottom: 10px;
-      letter-spacing: 1px;
-    }
-    header p {
-      opacity: 0.9;
-      font-size: 1rem;
-    }
-    nav {
-      background: #111;
-      padding: 12px;
-      text-align: center;
-    }
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      margin: 0 12px;
-      font-weight: 500;
-    }
-    nav a:hover {
-      color: #25d366;
-    }
-    .container {
-      max-width: 1100px;
-      margin: auto;
-      padding: 30px 20px;
-    }
-    .hero {
-      text-align: center;
-      margin-bottom: 40px;
-    }
-    .hero h2 {
-      font-size: 1.8rem;
-      margin-bottom: 10px;
-    }
-    .hero p {
-      color: #666;
-      margin-bottom: 20px;
-    }
-    .btn {
-      display: inline-block;
-      background: #25d366;
-      color: #fff;
-      padding: 14px 24px;
-      border-radius: 30px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .btn:hover {
-      background: #1ebe5d;
-    }
-    .section-title {
-      text-align: center;
-      margin-bottom: 30px;
-      font-size: 1.6rem;
-    }
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-    }
-    .card {
-      background: #fff;
-      border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.08);
-      transition: transform 0.3s;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-    }
-    .card h3 {
-      margin-bottom: 10px;
-    }
-    .price {
-      color: #25d366;
-      font-weight: bold;
-      margin-bottom: 8px;
-    }
-    .features {
-      background: #fff;
-      margin-top: 50px;
-      padding: 40px 20px;
-      border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.08);
-    }
-    .features ul {
-      list-style: none;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 15px;
-    }
-    .features li {
-      background: #f7f7f7;
-      padding: 15px;
-      border-radius: 10px;
-    }
-    footer {
-      margin-top: 60px;
-      background: #111;
-      color: #ccc;
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9rem;
-    }
-    .wa-float {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: #25d366;
-      color: #fff;
-      padding: 15px 18px;
-      border-radius: 50%;
-      font-size: 20px;
-      text-decoration: none;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>AP Gitar Musik | Toko Gitar & Alat Musik</title>
+<meta name="description" content="AP Gitar Musik adalah toko gitar dan alat musik terpercaya. Produk original, harga bersahabat, pengiriman aman.">
+
+<style>
+body{
+  margin:0;font-family:Arial,Helvetica,sans-serif;
+  background:#f4f4f4;color:#333;line-height:1.6
+}
+header{
+  background:#111;color:#fff;padding:50px 20px;text-align:center
+}
+nav{
+  background:#000;padding:10px;text-align:center;position:sticky;top:0
+}
+nav a{
+  color:#fff;margin:0 10px;text-decoration:none;font-weight:bold
+}
+nav a:hover{color:#25d366}
+section{
+  padding:50px 20px;max-width:1100px;margin:auto
+}
+h2{text-align:center;margin-bottom:30px}
+.card{
+  background:#fff;padding:20px;border-radius:10px;
+  box-shadow:0 5px 15px rgba(0,0,0,.1)
+}
+.grid{
+  display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+  gap:20px
+}
+.btn{
+  display:inline-block;background:#25d366;color:#fff;
+  padding:12px 22px;border-radius:30px;text-decoration:none
+}
+.btn:hover{opacity:.9}
+footer{
+  background:#111;color:#aaa;text-align:center;padding:20px
+}
+input[type="search"]{
+  padding:10px;width:100%;max-width:400px;border-radius:20px;
+  border:1px solid #ccc
+}
+.wa{
+  position:fixed;right:20px;bottom:20px;
+  background:#25d366;color:#fff;
+  padding:15px;border-radius:50%;
+  text-decoration:none;font-weight:bold
+}
+</style>
 </head>
+
 <body>
 
 <header>
-  <h1>AP Gitar Musik</h1>
-  <p>Toko Gitar Berkualitas • Harga Bersahabat • Terpercaya</p>
+<h1>AP Gitar Musik</h1>
+<p>Toko Gitar & Alat Musik Terpercaya</p>
+<a href="#produk" class="btn">Lihat Produk</a>
 </header>
 
 <nav>
-  <a href="#produk">Produk</a>
-  <a href="#keunggulan">Keunggulan</a>
-  <a href="#kontak">Kontak</a>
+<a href="#profil">Profil</a>
+<a href="#produk">Produk</a>
+<a href="#galeri">Galeri</a>
+<a href="#blog">Artikel</a>
+<a href="#testimoni">Testimoni</a>
+<a href="#faq">FAQ</a>
+<a href="#kontak">Kontak</a>
 </nav>
 
-<div class="container">
-  <section class="hero">
-    <h2>Gitar Berkualitas untuk Pemula & Profesional</h2>
-    <p>Produk original, pengiriman aman, dan CS responsif siap membantu.</p>
-    <a class="btn" href="https://wa.me/628xxxxxxxxxx" target="_blank">Chat WhatsApp</a>
-  </section>
+<section>
+<h2>Pencarian</h2>
+<center>
+<input type="search" placeholder="Cari produk, artikel, atau info...">
+</center>
+</section>
 
-  <h2 id="produk" class="section-title">Produk Unggulan</h2>
-  <div class="products">
-    <div class="card">
-      <h3>Gitar Akustik</h3>
-      <p class="price">Mulai Rp 500.000</p>
-      <p>Suara jernih, nyaman dimainkan.</p>
-    </div>
-    <div class="card">
-      <h3>Gitar Elektrik</h3>
-      <p class="price">Mulai Rp 1.200.000</p>
-      <p>Rock • Blues • Jazz</p>
-    </div>
-    <div class="card">
-      <h3>Bass</h3>
-      <p class="price">Mulai Rp 1.500.000</p>
-      <p>Low end kuat & stabil.</p>
-    </div>
-    <div class="card">
-      <h3>Aksesoris</h3>
-      <p class="price">Harga Terjangkau</p>
-      <p>Senar, tuner, strap, capo, dll.</p>
-    </div>
-  </div>
-
-  <section id="keunggulan" class="features">
-    <h2 class="section-title">Kenapa Pilih AP Gitar Musik?</h2>
-    <ul>
-      <li>✅ Produk 100% original</li>
-      <li>🚚 Pengiriman aman & cepat</li>
-      <li>💬 CS ramah & responsif</li>
-      <li>💸 Harga jujur & bersaing</li>
-    </ul>
-  </section>
+<section id="profil">
+<h2>Profil Perusahaan</h2>
+<div class="card">
+<p><strong>AP Gitar Musik</strong> berdiri untuk menyediakan gitar dan alat musik berkualitas bagi pemula hingga profesional.</p>
+<p><strong>Visi:</strong> Menjadi toko alat musik terpercaya di Indonesia.</p>
+<p><strong>Misi:</strong> Produk original, harga jujur, pelayanan ramah.</p>
 </div>
+</section>
 
-<footer id="kontak">
-  <p>© 2026 AP Gitar Musik • Semua Hak Dilindungi</p>
+<section id="produk">
+<h2>Produk & Jasa</h2>
+<div class="grid">
+<div class="card"><h3>Gitar Akustik</h3><p>Mulai Rp 500.000</p></div>
+<div class="card"><h3>Gitar Elektrik</h3><p>Mulai Rp 1.200.000</p></div>
+<div class="card"><h3>Bass</h3><p>Mulai Rp 1.500.000</p></div>
+<div class="card"><h3>Aksesoris</h3><p>Senar, capo, strap, tuner</p></div>
+</div>
+</section>
+
+<section id="galeri">
+<h2>Galeri</h2>
+<div class="grid">
+<div class="card">Foto Produk 1</div>
+<div class="card">Foto Produk 2</div>
+<div class="card">Foto Toko</div>
+</div>
+</section>
+
+<section id="blog">
+<h2>Berita & Artikel</h2>
+<div class="grid">
+<div class="card">
+<h3>Tips Memilih Gitar Pemula</h3>
+<p>Panduan memilih gitar yang nyaman & awet.</p>
+</div>
+<div class="card">
+<h3>Perbedaan Gitar Akustik & Elektrik</h3>
+<p>Cocokkan dengan gaya bermainmu.</p>
+</div>
+</div>
+</section>
+
+<section id="testimoni">
+<h2>Testimoni Pelanggan</h2>
+<div class="grid">
+<div class="card">⭐⭐⭐⭐⭐<br>“Barang bagus & cepat sampai.”</div>
+<div class="card">⭐⭐⭐⭐⭐<br>“CS ramah, recommended.”</div>
+</div>
+</section>
+
+<section id="faq">
+<h2>FAQ</h2>
+<div class="card">
+<p><strong>Apakah produk original?</strong><br>Ya, 100% original.</p>
+<p><strong>Bisa kirim ke luar kota?</strong><br>Bisa, seluruh Indonesia.</p>
+</div>
+</section>
+
+<section id="kontak">
+<h2>Kontak & Lokasi</h2>
+<div class="card">
+<p>📞 WhatsApp: 08xxxxxxxxxx</p>
+<p>📍 Alamat: Indonesia</p>
+</div>
+</section>
+
+<footer>
+<p>© 2026 AP Gitar Musik</p>
 </footer>
 
-<a class="wa-float" href="https://wa.me/628xxxxxxxxxx" target="_blank">WA</a>
+<a class="wa" href="https://wa.me/628xxxxxxxxxx" target="_blank">WA</a>
 
 </body>
 </html>
