Update HTML structure and content for website

--- a/index.html
+++ b/index.html
@@ -3,113 +3,66 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AP Gitar Musik | Toko Gitar & Alat Musik Profesional</title>
-<meta name="description" content="AP Gitar Musik adalah toko gitar dan alat musik profesional. Menyediakan gitar akustik, elektrik, bass, dan aksesoris berkualitas dengan pelayanan jujur dan terpercaya.">
+<title>AP Gitar Musik | Toko Alat Musik Profesional</title>
+<meta name="description" content="AP Gitar Musik menyediakan gitar akustik, elektrik, bass, dan aksesoris. Konsultasi jujur, kualitas terjamin, kirim aman.">
 
 <style>
-:root{
-  --dark:#0a0a0a;
-  --accent:#25d366;
-  --bg:#f4f6fb;
-  --card:#ffffff;
-}
+:root{--dark:#0b0b0b;--accent:#25d366;--bg:#f3f5fa;--card:#fff}
 *{box-sizing:border-box}
 html{scroll-behavior:smooth}
-body{
-  margin:0;font-family:'Segoe UI',Arial,sans-serif;
-  background:var(--bg);color:#333;line-height:1.9
-}
+body{margin:0;font-family:Segoe UI,Arial,sans-serif;background:var(--bg);color:#333;line-height:1.9}
 img{max-width:100%;border-radius:18px}
 a{text-decoration:none;color:inherit}
 
 /* NAV */
-nav{
-  background:rgba(0,0,0,.9);
-  padding:16px 22px;
-  display:flex;justify-content:center;gap:22px;
-  position:sticky;top:0;z-index:999;
-  backdrop-filter:blur(8px)
-}
+nav{position:sticky;top:0;z-index:999;display:flex;gap:22px;justify-content:center;
+background:rgba(0,0,0,.9);backdrop-filter:blur(8px);padding:14px}
 nav a{color:#fff;font-weight:600}
 nav a:hover{color:var(--accent)}
 
 /* HERO */
 header{
-  background:
-  linear-gradient(rgba(0,0,0,.65),rgba(0,0,0,.65)),
-  url('https://images.unsplash.com/photo-1511379938547-c1f69419868d');
-  background-size:cover;background-position:center;
-  color:#fff;padding:140px 20px;text-align:center
-}
-header h1{font-size:54px;margin:0}
-header p{
-  font-size:21px;max-width:900px;
-  margin:30px auto;opacity:.95
-}
+background:
+linear-gradient(rgba(0,0,0,.65),rgba(0,0,0,.65)),
+url('img/hero.jpg');
+background-size:cover;background-position:center;
+color:#fff;text-align:center;padding:150px 20px}
+header h1{font-size:56px;margin:0}
+header p{max-width:900px;margin:28px auto;font-size:21px}
 
-/* BUTTON */
-.btn{
-  display:inline-block;
-  background:var(--accent);color:#fff;
-  padding:18px 42px;border-radius:50px;
-  font-weight:bold;font-size:18px
-}
+/* BTN */
+.btn{display:inline-block;background:var(--accent);color:#fff;
+padding:18px 42px;border-radius:50px;font-weight:800;font-size:18px}
 
 /* SECTION */
-section{
-  max-width:1200px;margin:auto;
-  padding:110px 20px
-}
+section{max-width:1200px;margin:auto;padding:110px 20px}
 h2{text-align:center;font-size:40px;margin-bottom:70px}
 
-/* GRID & CARD */
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-  gap:40px
-}
+/* GRID */
+.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:36px}
 .card{
-  background:var(--card);
-  padding:34px;border-radius:26px;
-  box-shadow:0 18px 50px rgba(0,0,0,.1);
-  opacity:0;transform:translateY(50px);
-  transition:1s
-}
+background:var(--card);padding:34px;border-radius:26px;
+box-shadow:0 18px 50px rgba(0,0,0,.1);
+opacity:0;transform:translateY(40px);transition:.9s}
 .card.show{opacity:1;transform:none}
+.price{color:var(--accent);font-weight:900;font-size:20px}
 
-.price{color:var(--accent);font-weight:bold;font-size:20px}
+/* SEARCH */
+.search{max-width:520px;margin:0 auto 50px}
+.search input{
+width:100%;padding:16px 22px;border-radius:50px;border:1px solid #ddd;font-size:16px}
+
+/* FAQ */
+.faq-item{border-bottom:1px solid #eee;padding:18px 0;cursor:pointer}
+.faq-item h4{margin:0}
+.faq-item p{display:none;margin:14px 0 0;color:#555}
 
 /* FOOTER */
-footer{
-  background:#0a0a0a;color:#aaa;
-  text-align:center;padding:45px
-}
+footer{background:#0b0b0b;color:#aaa;text-align:center;padding:45px}
 
-/* WA FLOAT */
-.wa{
-  position:fixed;right:22px;bottom:22px;
-  background:var(--accent);color:#fff;
-  padding:20px;border-radius:50%;
-  font-weight:bold;font-size:20px;
-  box-shadow:0 12px 35px rgba(0,0,0,.35)
-}
-
-/* POPUP */
-#popup{
-  position:fixed;inset:0;
-  background:rgba(0,0,0,.75);
-  display:none;align-items:center;justify-content:center;
-  z-index:2000
-}
-#popup .box{
-  background:#fff;max-width:520px;
-  padding:34px;border-radius:24px;
-  text-align:center
-}
-.close{
-  cursor:pointer;color:red;
-  font-weight:bold;float:right
-}
+/* WA */
+.wa{position:fixed;right:22px;bottom:22px;background:var(--accent);color:#fff;
+padding:20px;border-radius:50%;font-weight:900;box-shadow:0 12px 35px rgba(0,0,0,.35)}
 </style>
 </head>
 
@@ -117,131 +70,135 @@ footer{
 
 <nav>
 <a href="#home">Home</a>
-<a href="#profil">Tentang</a>
+<a href="#tentang">Tentang</a>
 <a href="#produk">Produk</a>
 <a href="#galeri">Galeri</a>
 <a href="#edukasi">Edukasi</a>
-<a href="#testimoni">Testimoni</a>
+<a href="#faq">FAQ</a>
 <a href="#kontak">Kontak</a>
 </nav>
 
 <header id="home">
 <h1>AP Gitar Musik</h1>
 <p>
-AP Gitar Musik bukan hanya menjual alat musik,  
-kami membantu kamu menemukan instrumen yang benar-benar cocok
-dengan karakter, kebutuhan, dan perjalanan musikalmu.
-Dari pemula sampai profesional, kami layani dengan sepenuh hati.
+Kami tidak sekadar menjual alat musik.
+Kami membantu musisi—pemula hingga profesional—
+menemukan instrumen yang benar-benar cocok dengan karakter dan tujuan bermainnya.
+Setiap produk kami seleksi, cek, dan rekomendasikan dengan jujur.
 </p>
-<a href="#produk" class="btn">Jelajahi Produk</a>
+<a href="#produk" class="btn">Lihat Produk</a>
 </header>
 
-<section id="profil">
-<h2>Kenapa AP Gitar Musik?</h2>
+<section id="tentang">
+<h2>Tentang AP Gitar Musik</h2>
 <div class="grid">
 <div class="card">
 <p>
-Kami percaya bahwa alat musik bukan sekadar barang,
-melainkan teman jangka panjang dalam berkarya.
-Karena itu setiap gitar yang kami jual
-melewati proses seleksi dan pengecekan yang ketat.
+Berangkat dari kecintaan pada musik, AP Gitar Musik hadir
+sebagai partner perjalanan musikal Anda.
+Kami mengutamakan edukasi, transparansi, dan kepuasan jangka panjang.
 </p>
 <p>
-Kami mengutamakan kejujuran, edukasi, dan kenyamanan pembeli.
-Bagi kami, kepuasan pelanggan jauh lebih penting daripada sekadar transaksi.
+Belanja aman, konsultasi terbuka, dan dukungan penuh sebelum & sesudah pembelian.
 </p>
 </div>
-<img class="card" src="https://images.unsplash.com/photo-1510915361894-db8b60106cb1">
+<img class="card" src="img/toko.jpg">
 </div>
 </section>
 
 <section id="produk">
-<h2>Produk Unggulan Kami</h2>
-<div class="grid">
+<h2>Produk Unggulan</h2>
 
-<div class="card" onclick="openPopup(
-'Gitar Akustik',
-'https://images.unsplash.com/photo-1510915361894-db8b60106cb1',
-'Gitar akustik dengan karakter suara hangat, nyaman dimainkan, dan cocok untuk pemula hingga musisi profesional.'
-)">
-<img src="https://images.unsplash.com/photo-1510915361894-db8b60106cb1">
-<h3>Gitar Akustik</h3>
-<p class="price">Mulai Rp 500.000</p>
-<p>Klik untuk detail produk</p>
+<div class="search">
+<input type="text" id="search" placeholder="Cari gitar, bass, aksesoris...">
 </div>
 
-<div class="card" onclick="openPopup(
-'Gitar Elektrik',
-'https://images.unsplash.com/photo-1524678606370-a47ad25cb82a',
-'Gitar elektrik dengan karakter suara tajam dan fleksibel, cocok untuk rock, blues, jazz, dan genre modern.'
-)">
-<img src="https://images.unsplash.com/photo-1524678606370-a47ad25cb82a">
-<h3>Gitar Elektrik</h3>
-<p class="price">Mulai Rp 1.200.000</p>
-<p>Klik untuk detail produk</p>
+<div class="grid" id="productList">
+
+<div class="card product">
+<img src="img/gitar-akustik.jpg">
+<h3>Gitar Akustik Solid Top</h3>
+<p class="price">Rp 1.250.000</p>
+<p>
+Karakter suara hangat dan seimbang,
+nyaman untuk belajar serius hingga tampil akustikan.
+</p>
+<a class="btn" target="_blank"
+href="https://wa.me/628xxxxxxxxxx?text=Halo%20saya%20ingin%20beli%20Gitar%20Akustik%20Solid%20Top%20harga%201.250.000">
+Beli Sekarang</a>
 </div>
 
-<div class="card" onclick="openPopup(
-'Bass Elektrik',
-'https://images.unsplash.com/photo-1616627989982-1db5c59f9b2b',
-'Bass elektrik dengan low end solid dan stabil, sangat cocok untuk latihan, recording, maupun tampil di panggung.'
-)">
-<img src="https://images.unsplash.com/photo-1616627989982-1db5c59f9b2b">
-<h3>Bass Elektrik</h3>
-<p class="price">Mulai Rp 1.500.000</p>
-<p>Klik untuk detail produk</p>
+<div class="card product">
+<img src="img/gitar-elektrik.jpg">
+<h3>Gitar Elektrik Modern</h3>
+<p class="price">Rp 1.950.000</p>
+<p>
+Fleksibel untuk rock, blues, jazz, hingga pop modern.
+Setup rapi dan nyaman dimainkan.
+</p>
+<a class="btn" target="_blank"
+href="https://wa.me/628xxxxxxxxxx?text=Halo%20saya%20ingin%20beli%20Gitar%20Elektrik%20Modern%20harga%201.950.000">
+Beli Sekarang</a>
+</div>
+
+<div class="card product">
+<img src="img/bass.jpg">
+<h3>Bass Elektrik Solid</h3>
+<p class="price">Rp 2.100.000</p>
+<p>
+Low end kuat dan stabil untuk latihan band,
+recording, maupun panggung.
+</p>
+<a class="btn" target="_blank"
+href="https://wa.me/628xxxxxxxxxx?text=Halo%20saya%20ingin%20beli%20Bass%20Elektrik%20Solid%20harga%202.100.000">
+Beli Sekarang</a>
 </div>
 
 </div>
 </section>
 
 <section id="galeri">
-<h2>Galeri & Aktivitas</h2>
+<h2>Galeri Aktivitas</h2>
 <div class="grid">
-<img class="card" src="https://images.unsplash.com/photo-1485579149621-3123dd979885">
-<img class="card" src="https://images.unsplash.com/photo-1507838153414-b4b713384a76">
-<img class="card" src="https://images.unsplash.com/photo-1516280440614-37939bbacd81">
+<img class="card" src="img/galeri1.jpg">
+<img class="card" src="img/galeri2.jpg">
+<img class="card" src="img/galeri3.jpg">
 </div>
 </section>
 
 <section id="edukasi">
-<h2>Artikel & Edukasi Musik</h2>
+<h2>Artikel & Edukasi</h2>
 <div class="grid">
 <div class="card">
-<h3>Tips Memilih Gitar Pertama</h3>
+<h3>Tips Memilih Gitar yang Tepat</h3>
 <p>
-Memilih gitar pertama adalah langkah besar.
-Kami membahas ukuran, jenis senar,
-dan kesalahan yang sering dilakukan pemula.
+Ukuran body, jenis senar, dan karakter suara
+adalah faktor krusial yang sering terlewat oleh pemula.
 </p>
 </div>
 <div class="card">
-<h3>Perawatan Gitar Agar Tahan Lama</h3>
+<h3>Perawatan Alat Musik</h3>
 <p>
 Perawatan sederhana namun konsisten
-akan membuat gitar tetap stabil dan nyaman dimainkan bertahun-tahun.
+membuat instrumen awet dan stabil bertahun-tahun.
 </p>
 </div>
 </div>
 </section>
 
-<section id="testimoni">
-<h2>Testimoni Pelanggan</h2>
-<div class="grid">
-<div class="card">
-⭐⭐⭐⭐⭐
-<p>
-“Saya beli gitar tanpa ragu.
-Penjualnya paham musik dan tidak asal jual.”
-</p>
+<section id="faq">
+<h2>Pertanyaan Umum</h2>
+<div class="card faq-item">
+<h4>Apakah bisa konsultasi sebelum beli?</h4>
+<p>Tentu. Kami sangat menyarankan konsultasi agar pilihan tepat.</p>
 </div>
-<div class="card">
-⭐⭐⭐⭐⭐
-<p>
-“Packing aman, respon cepat,
-dan barang sesuai ekspektasi.”
-</p>
+<div class="card faq-item">
+<h4>Apakah pengiriman aman?</h4>
+<p>Kami menggunakan packing berlapis dan standar pengiriman aman.</p>
 </div>
+<div class="card faq-item">
+<h4>Apakah cocok untuk pemula?</h4>
+<p>Sangat cocok. Kami bantu dari nol sampai siap bermain.</p>
 </div>
 </section>
 
@@ -249,9 +206,8 @@ dan barang sesuai ekspektasi.”
 <h2>Kontak & Pemesanan</h2>
 <div class="card">
 <p>
-Ingin tanya dulu sebelum beli?  
-Kami sangat terbuka untuk konsultasi.
-Klik WhatsApp dan jelaskan kebutuhan musik kamu.
+Butuh rekomendasi atau mau tanya detail?
+Klik WhatsApp dan ceritakan kebutuhan musik Anda.
 </p>
 <p>📞 WhatsApp: 08xxxxxxxxxx</p>
 <p>📍 Indonesia</p>
@@ -259,44 +215,36 @@ Klik WhatsApp dan jelaskan kebutuhan musik kamu.
 </section>
 
 <footer>
-<p>© 2026 AP Gitar Musik — Toko Gitar & Alat Musik Profesional</p>
+<p>© 2026 AP Gitar Musik — Profesional • Jujur • Terpercaya</p>
 </footer>
 
 <a class="wa" href="https://wa.me/628xxxxxxxxxx" target="_blank">WA</a>
 
-<!-- POPUP -->
-<div id="popup">
-<div class="box">
-<span class="close" onclick="closePopup()">✖</span>
-<h3 id="pTitle"></h3>
-<img id="pImg">
-<p id="pDesc"></p>
-<a id="pWa" class="btn" target="_blank">Pesan via WhatsApp</a>
-</div>
-</div>
-
 <script>
-/* ANIMASI SCROLL */
+/* Animasi Scroll */
 const cards=document.querySelectorAll('.card');
 const obs=new IntersectionObserver(e=>{
-  e.forEach(x=>{
-    if(x.isIntersecting)x.target.classList.add('show');
-  });
-},{threshold:.2});
+e.forEach(x=>x.isIntersecting&&x.target.classList.add('show'));
+},{threshold:.15});
 cards.forEach(c=>obs.observe(c));
 
-/* POPUP */
-function openPopup(title,img,desc){
-  document.getElementById('pTitle').innerText=title;
-  document.getElementById('pImg').src=img;
-  document.getElementById('pDesc').innerText=desc;
-  document.getElementById('pWa').href=
-  'https://wa.me/628xxxxxxxxxx?text=Saya%20tertarik%20dengan%20'+title;
-  document.getElementById('popup').style.display='flex';
-}
-function closePopup(){
-  document.getElementById('popup').style.display='none';
-}
+/* Live Search */
+const search=document.getElementById('search');
+const products=document.querySelectorAll('.product');
+search.addEventListener('input',()=>{
+const q=search.value.toLowerCase();
+products.forEach(p=>{
+p.style.display=p.innerText.toLowerCase().includes(q)?'block':'none';
+});
+});
+
+/* FAQ Toggle */
+document.querySelectorAll('.faq-item').forEach(f=>{
+f.addEventListener('click',()=>{
+const p=f.querySelector('p');
+p.style.display=p.style.display==='block'?'none':'block';
+});
+});
 </script>
 
 </body>
